# CLangHotReload

./: CMakeLists.txt  README.md  build.bat  update.bat
example/: hot_loader.h  main.c
lib/: header.h  impl.c  lib.h
